--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "standard-version": "^4.3.0"
   },
   "dependencies": {
-    "jquery": ">=1.7"
+    "jquery": ">=1.7",
+    "natives": "^1.1.6"
   }
 }
